--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "email": "email dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.2",
+    "@bufbuild/protobuf": "^1.9.0",
     "@clerk/nextjs": "^6.11.1",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^4.0.0",
